qt/gen_qgesture.h

typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPinchGesture QPinchGesture;
typedef struct QPointF QPointF;
typedef struct QSwipeGesture QSwipeGesture;
typedef struct QTapGesture QTapGesture;
typedef struct QTimerEvent QTimerEvent;
void QPinchGesture_setLastRotationAngle(QPinchGesture* self, double value);
void QPinchGesture_setRotationAngle(QPinchGesture* self, double value);
struct miqt_string QPinchGesture_tr2(const char* s, const char* c);
struct miqt_string QPinchGesture_tr3(const char* s, const char* c, int n);
struct miqt_string QPinchGesture_trUtf82(const char* s, const char* c);
struct miqt_string QPinchGesture_trUtf83(const char* s, const char* c, int n);
bool QPinchGesture_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QPinchGesture_virtualbase_metaObject(const void* self);
bool QPinchGesture_override_virtual_metacast(void* self, intptr_t slot);
void* QPinchGesture_virtualbase_metacast(void* self, const char* param1);
bool QPinchGesture_override_virtual_metacall(void* self, intptr_t slot);
int QPinchGesture_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QPinchGesture_override_virtual_event(void* self, intptr_t slot);
bool QPinchGesture_virtualbase_event(void* self, QEvent* event);
bool QPinchGesture_override_virtual_eventFilter(void* self, intptr_t slot);
bool QPinchGesture_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QPinchGesture_override_virtual_timerEvent(void* self, intptr_t slot);
void QPinchGesture_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QPinchGesture_override_virtual_childEvent(void* self, intptr_t slot);
void QPinchGesture_virtualbase_childEvent(void* self, QChildEvent* event);
bool QPinchGesture_override_virtual_customEvent(void* self, intptr_t slot);
void QPinchGesture_virtualbase_customEvent(void* self, QEvent* event);
bool QPinchGesture_override_virtual_connectNotify(void* self, intptr_t slot);
void QPinchGesture_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QPinchGesture_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QPinchGesture_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QPinchGesture_staticMetaObject();
void QPinchGesture_delete(QPinchGesture* self);
QSwipeGesture* QSwipeGesture_new();
QSwipeGesture* QSwipeGesture_new2(QObject* parent);
QMetaObject* QSwipeGesture_metaObject(const QSwipeGesture* self);
void* QSwipeGesture_metacast(QSwipeGesture* self, const char* param1);
int QSwipeGesture_metacall(QSwipeGesture* self, int param1, int param2, void** param3);
struct miqt_string QSwipeGesture_tr(const char* s);
struct miqt_string QSwipeGesture_trUtf8(const char* s);
int QSwipeGesture_horizontalDirection(const QSwipeGesture* self);
int QSwipeGesture_verticalDirection(const QSwipeGesture* self);
double QSwipeGesture_swipeAngle(const QSwipeGesture* self);
void QSwipeGesture_setSwipeAngle(QSwipeGesture* self, double value);
struct miqt_string QSwipeGesture_tr2(const char* s, const char* c);
struct miqt_string QSwipeGesture_tr3(const char* s, const char* c, int n);
struct miqt_string QSwipeGesture_trUtf82(const char* s, const char* c);
struct miqt_string QSwipeGesture_trUtf83(const char* s, const char* c, int n);
bool QSwipeGesture_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QSwipeGesture_virtualbase_metaObject(const void* self);
bool QSwipeGesture_override_virtual_metacast(void* self, intptr_t slot);
void* QSwipeGesture_virtualbase_metacast(void* self, const char* param1);
bool QSwipeGesture_override_virtual_metacall(void* self, intptr_t slot);
int QSwipeGesture_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QSwipeGesture_override_virtual_event(void* self, intptr_t slot);
bool QSwipeGesture_virtualbase_event(void* self, QEvent* event);
bool QSwipeGesture_override_virtual_eventFilter(void* self, intptr_t slot);
bool QSwipeGesture_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QSwipeGesture_override_virtual_timerEvent(void* self, intptr_t slot);
void QSwipeGesture_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QSwipeGesture_override_virtual_childEvent(void* self, intptr_t slot);
void QSwipeGesture_virtualbase_childEvent(void* self, QChildEvent* event);
bool QSwipeGesture_override_virtual_customEvent(void* self, intptr_t slot);
void QSwipeGesture_virtualbase_customEvent(void* self, QEvent* event);
bool QSwipeGesture_override_virtual_connectNotify(void* self, intptr_t slot);
void QSwipeGesture_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QSwipeGesture_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QSwipeGesture_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QSwipeGesture_staticMetaObject();
void QSwipeGesture_delete(QSwipeGesture* self);
QTapGesture* QTapGesture_new();
QTapGesture* QTapGesture_new2(QObject* parent);
QMetaObject* QTapGesture_metaObject(const QTapGesture* self);
void* QTapGesture_metacast(QTapGesture* self, const char* param1);
int QTapGesture_metacall(QTapGesture* self, int param1, int param2, void** param3);
struct miqt_string QTapGesture_tr(const char* s);
struct miqt_string QTapGesture_trUtf8(const char* s);
QPointF* QTapGesture_position(const QTapGesture* self);
void QTapGesture_setPosition(QTapGesture* self, QPointF* pos);
struct miqt_string QTapGesture_tr2(const char* s, const char* c);
struct miqt_string QTapGesture_tr3(const char* s, const char* c, int n);
struct miqt_string QTapGesture_trUtf82(const char* s, const char* c);
struct miqt_string QTapGesture_trUtf83(const char* s, const char* c, int n);
bool QTapGesture_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QTapGesture_virtualbase_metaObject(const void* self);
bool QTapGesture_override_virtual_metacast(void* self, intptr_t slot);
void* QTapGesture_virtualbase_metacast(void* self, const char* param1);
bool QTapGesture_override_virtual_metacall(void* self, intptr_t slot);
int QTapGesture_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QTapGesture_override_virtual_event(void* self, intptr_t slot);
bool QTapGesture_virtualbase_event(void* self, QEvent* event);
bool QTapGesture_override_virtual_eventFilter(void* self, intptr_t slot);
bool QTapGesture_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QTapGesture_override_virtual_timerEvent(void* self, intptr_t slot);
void QTapGesture_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QTapGesture_override_virtual_childEvent(void* self, intptr_t slot);
void QTapGesture_virtualbase_childEvent(void* self, QChildEvent* event);
bool QTapGesture_override_virtual_customEvent(void* self, intptr_t slot);
void QTapGesture_virtualbase_customEvent(void* self, QEvent* event);
bool QTapGesture_override_virtual_connectNotify(void* self, intptr_t slot);
void QTapGesture_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QTapGesture_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QTapGesture_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QTapGesture_staticMetaObject();