qt/gen_qgesture.nim

proc fcQPinchGesture_setLastRotationAngle(self: pointer, value: float64): void {.importc: "QPinchGesture_setLastRotationAngle".}
proc fcQPinchGesture_setRotationAngle(self: pointer, value: float64): void {.importc: "QPinchGesture_setRotationAngle".}
proc fcQPinchGesture_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QPinchGesture_tr2".}
proc fcQPinchGesture_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QPinchGesture_tr3".}
proc fcQPinchGesture_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QPinchGesture_trUtf82".}
proc fcQPinchGesture_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QPinchGesture_trUtf83".}
proc fQPinchGesture_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QPinchGesture_virtualbase_metaObject".}
proc fcQPinchGesture_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QPinchGesture_override_virtual_metaObject".}
proc fQPinchGesture_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QPinchGesture_virtualbase_metacast".}
proc fcQPinchGesture_override_virtual_metacast(self: pointer, slot: int) {.importc: "QPinchGesture_override_virtual_metacast".}
proc fQPinchGesture_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QPinchGesture_virtualbase_metacall".}
proc fcQPinchGesture_override_virtual_metacall(self: pointer, slot: int) {.importc: "QPinchGesture_override_virtual_metacall".}
proc fQPinchGesture_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QPinchGesture_virtualbase_event".}
proc fcQPinchGesture_override_virtual_event(self: pointer, slot: int) {.importc: "QPinchGesture_override_virtual_event".}
proc fQPinchGesture_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QPinchGesture_virtualbase_eventFilter".}
proc fcQPinchGesture_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QPinchGesture_override_virtual_eventFilter".}
proc fQPinchGesture_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QPinchGesture_virtualbase_timerEvent".}
proc fcQPinchGesture_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QPinchGesture_override_virtual_timerEvent".}
proc fQPinchGesture_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QPinchGesture_virtualbase_childEvent".}
proc fcQPinchGesture_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QPinchGesture_override_virtual_childEvent".}
proc fQPinchGesture_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QPinchGesture_virtualbase_customEvent".}
proc fcQPinchGesture_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QPinchGesture_override_virtual_customEvent".}
proc fQPinchGesture_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QPinchGesture_virtualbase_connectNotify".}
proc fcQPinchGesture_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QPinchGesture_override_virtual_connectNotify".}
proc fQPinchGesture_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QPinchGesture_virtualbase_disconnectNotify".}
proc fcQPinchGesture_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QPinchGesture_override_virtual_disconnectNotify".}
proc fcQPinchGesture_staticMetaObject(): pointer {.importc: "QPinchGesture_staticMetaObject".}
proc fcQPinchGesture_delete(self: pointer) {.importc: "QPinchGesture_delete".}
proc fcQSwipeGesture_new(): ptr cQSwipeGesture {.importc: "QSwipeGesture_new".}
proc fcQSwipeGesture_new2(parent: pointer): ptr cQSwipeGesture {.importc: "QSwipeGesture_new2".}
proc fcQSwipeGesture_metaObject(self: pointer, ): pointer {.importc: "QSwipeGesture_metaObject".}
proc fcQSwipeGesture_metacast(self: pointer, param1: cstring): pointer {.importc: "QSwipeGesture_metacast".}
proc fcQSwipeGesture_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QSwipeGesture_metacall".}
proc fcQSwipeGesture_tr(s: cstring): struct_miqt_string {.importc: "QSwipeGesture_tr".}
proc fcQSwipeGesture_trUtf8(s: cstring): struct_miqt_string {.importc: "QSwipeGesture_trUtf8".}
proc fcQSwipeGesture_horizontalDirection(self: pointer, ): cint {.importc: "QSwipeGesture_horizontalDirection".}
proc fcQSwipeGesture_verticalDirection(self: pointer, ): cint {.importc: "QSwipeGesture_verticalDirection".}
proc fcQSwipeGesture_swipeAngle(self: pointer, ): float64 {.importc: "QSwipeGesture_swipeAngle".}
proc fcQSwipeGesture_setSwipeAngle(self: pointer, value: float64): void {.importc: "QSwipeGesture_setSwipeAngle".}
proc fcQSwipeGesture_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QSwipeGesture_tr2".}
proc fcQSwipeGesture_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QSwipeGesture_tr3".}
proc fcQSwipeGesture_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QSwipeGesture_trUtf82".}
proc fcQSwipeGesture_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QSwipeGesture_trUtf83".}
proc fQSwipeGesture_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QSwipeGesture_virtualbase_metaObject".}
proc fcQSwipeGesture_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QSwipeGesture_override_virtual_metaObject".}
proc fQSwipeGesture_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QSwipeGesture_virtualbase_metacast".}
proc fcQSwipeGesture_override_virtual_metacast(self: pointer, slot: int) {.importc: "QSwipeGesture_override_virtual_metacast".}
proc fQSwipeGesture_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QSwipeGesture_virtualbase_metacall".}
proc fcQSwipeGesture_override_virtual_metacall(self: pointer, slot: int) {.importc: "QSwipeGesture_override_virtual_metacall".}
proc fQSwipeGesture_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QSwipeGesture_virtualbase_event".}
proc fcQSwipeGesture_override_virtual_event(self: pointer, slot: int) {.importc: "QSwipeGesture_override_virtual_event".}
proc fQSwipeGesture_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QSwipeGesture_virtualbase_eventFilter".}
proc fcQSwipeGesture_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QSwipeGesture_override_virtual_eventFilter".}
proc fQSwipeGesture_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QSwipeGesture_virtualbase_timerEvent".}
proc fcQSwipeGesture_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QSwipeGesture_override_virtual_timerEvent".}
proc fQSwipeGesture_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QSwipeGesture_virtualbase_childEvent".}
proc fcQSwipeGesture_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QSwipeGesture_override_virtual_childEvent".}
proc fQSwipeGesture_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QSwipeGesture_virtualbase_customEvent".}
proc fcQSwipeGesture_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QSwipeGesture_override_virtual_customEvent".}
proc fQSwipeGesture_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QSwipeGesture_virtualbase_connectNotify".}
proc fcQSwipeGesture_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QSwipeGesture_override_virtual_connectNotify".}
proc fQSwipeGesture_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QSwipeGesture_virtualbase_disconnectNotify".}
proc fcQSwipeGesture_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QSwipeGesture_override_virtual_disconnectNotify".}
proc fcQSwipeGesture_staticMetaObject(): pointer {.importc: "QSwipeGesture_staticMetaObject".}
proc fcQSwipeGesture_delete(self: pointer) {.importc: "QSwipeGesture_delete".}
proc fcQTapGesture_new(): ptr cQTapGesture {.importc: "QTapGesture_new".}
proc fcQTapGesture_new2(parent: pointer): ptr cQTapGesture {.importc: "QTapGesture_new2".}
proc fcQTapGesture_metaObject(self: pointer, ): pointer {.importc: "QTapGesture_metaObject".}
proc fcQTapGesture_metacast(self: pointer, param1: cstring): pointer {.importc: "QTapGesture_metacast".}
proc fcQTapGesture_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QTapGesture_metacall".}
proc fcQTapGesture_tr(s: cstring): struct_miqt_string {.importc: "QTapGesture_tr".}
proc fcQTapGesture_trUtf8(s: cstring): struct_miqt_string {.importc: "QTapGesture_trUtf8".}
proc fcQTapGesture_position(self: pointer, ): pointer {.importc: "QTapGesture_position".}
proc fcQTapGesture_setPosition(self: pointer, pos: pointer): void {.importc: "QTapGesture_setPosition".}
proc fcQTapGesture_tr2(s: cstring, c: cstring): struct_miqt_string {.importc: "QTapGesture_tr2".}
proc fcQTapGesture_tr3(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QTapGesture_tr3".}
proc fcQTapGesture_trUtf82(s: cstring, c: cstring): struct_miqt_string {.importc: "QTapGesture_trUtf82".}
proc fcQTapGesture_trUtf83(s: cstring, c: cstring, n: cint): struct_miqt_string {.importc: "QTapGesture_trUtf83".}
proc fQTapGesture_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QTapGesture_virtualbase_metaObject".}
proc fcQTapGesture_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QTapGesture_override_virtual_metaObject".}
proc fQTapGesture_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QTapGesture_virtualbase_metacast".}
proc fcQTapGesture_override_virtual_metacast(self: pointer, slot: int) {.importc: "QTapGesture_override_virtual_metacast".}
proc fQTapGesture_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QTapGesture_virtualbase_metacall".}
proc fcQTapGesture_override_virtual_metacall(self: pointer, slot: int) {.importc: "QTapGesture_override_virtual_metacall".}
proc fQTapGesture_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QTapGesture_virtualbase_event".}
proc fcQTapGesture_override_virtual_event(self: pointer, slot: int) {.importc: "QTapGesture_override_virtual_event".}
proc fQTapGesture_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QTapGesture_virtualbase_eventFilter".}
proc fcQTapGesture_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QTapGesture_override_virtual_eventFilter".}
proc fQTapGesture_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QTapGesture_virtualbase_timerEvent".}
proc fcQTapGesture_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QTapGesture_override_virtual_timerEvent".}
proc fQTapGesture_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QTapGesture_virtualbase_childEvent".}
proc fcQTapGesture_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QTapGesture_override_virtual_childEvent".}
proc fQTapGesture_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QTapGesture_virtualbase_customEvent".}
proc fcQTapGesture_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QTapGesture_override_virtual_customEvent".}
proc fQTapGesture_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QTapGesture_virtualbase_connectNotify".}
proc fcQTapGesture_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QTapGesture_override_virtual_connectNotify".}
proc fQTapGesture_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QTapGesture_virtualbase_disconnectNotify".}
proc fcQTapGesture_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QTapGesture_override_virtual_disconnectNotify".}
proc fcQTapGesture_staticMetaObject(): pointer {.importc: "QTapGesture_staticMetaObject".}
